--- a/layouts/_partials/home/profile.html
+++ b/layouts/_partials/home/profile.html
@@ -20,38 +20,55 @@
 
     <h1 class="home-title">{{- $profile.title | default .Site.Title | safeHTML -}}</h1>
 
-    {{- with $profile.subtitle -}}
-        <div class="home-subtitle">
-            {{- if $profile.typeit -}}
-                {{- $id := dict "Content" . "Scratch" $.Scratch | partial "function/id.html" -}}
-                <div id="{{ $id }}" class="typeit"></div>
-                {{- dict $id (slice $id) | dict "typeitMap" | merge ($.Scratch.Get "this") | $.Scratch.Set "this" -}}
-            {{- else -}}
-                {{- . | safeHTML -}}
+    <div class="links">
+        {{- $socialMap := resources.Get "data/social.yml" | transform.Unmarshal -}}
+        {{- range $key, $value := .Site.Params.social -}}
+            {{- if $value -}}
+                {{- /* 尝试三种路径：原始名、首字母大写、全小写 */ -}}
+                {{- $fileNames := slice $key (printf "%s%s" (substr $key 0 1 | upper) (substr $key 1)) ($key | lower) -}}
+                {{- $customSvg := false -}}
+                
+                {{- range $fileNames -}}
+                    {{- if not $customSvg -}}
+                        {{- $customSvg = resources.Get (printf "svg/%s.svg" .) -}}
+                    {{- end -}}
+                {{- end -}}
+                
+                {{- if $customSvg -}}
+                    {{- /* 只有成功抓取到 SVG 对象才渲染，绝不报错 */ -}}
+                    <a href="{{ if reflect.IsMap $value }}{{ $value.prefix }}{{ $value.id }}{{ else }}{{ $value }}{{ end }}" title="{{ $key }}" target="_blank" rel="noopener noreffer me" class="social-icon-link">
+                        <span class="custom-icon-box {{ $key | lower }}">
+                            {{- $customSvg.Content | safeHTML -}}
+                        </span>
+                    </a>
+                {{- else -}}
+                    {{- /* 找不到自定义文件则走内置 Email 逻辑 */ -}}
+                    {{- $social := index $socialMap ($key | lower) | default dict -}}
+                    {{- if reflect.IsMap $value -}}
+                        {{- $social = merge $social $value -}}
+                    {{- else if ne $value true -}}
+                        {{- $social = dict "Id" $value | merge $social -}}
+                    {{- end -}}
+                    {{- partial "plugin/social.html" $social -}}
+                {{- end -}}
             {{- end -}}
-        </div>
-    {{- end -}}
+        {{- end -}}
+    </div>
+</div>
 
-    {{- if $profile.social -}}
-        <div class="links">
-            {{- $socialMap := resources.Get "data/social.yml" | transform.Unmarshal -}}
-            {{- range $key, $value := .Site.Params.social -}}
-                {{- if $value -}}
-                    {{- /* 尝试直接用原始 $key 寻找 Wechat.svg */ -}}
-                    {{- $svgPath := printf "svg/%v.svg" $key -}}
-                    {{- $customSvg := resources.Get $svgPath -}}
-                    
-                    {{- if $customSvg -}}
-                        {{- /* 只有找到文件才读取 .Content，防止报错 */ -}}
-                        <a href="{{ if reflect.IsMap $value }}{{ $value.prefix }}{{ $value.id }}{{ else }}{{ $value }}{{ end }}" title="{{ $key }}" target="_blank" rel="noopener noreffer me" class="social-icon-link">
-                            <span class="custom-icon-box {{ $key | lower }}">
-                                {{- $customSvg.Content | safeHTML -}}
-                            </span>
-                        </a>
-                    {{- else -}}
-                        {{- /* 如果找不到，走内置 Email 逻辑 */ -}}
-                        {{- $keyLower := $key | lower -}}
-                        {{- $social := index $socialMap $keyLower | default dict -}}
-                        {{- if reflect.IsMap $value -}}
-                            {{- $social = merge $social $value -}}
-                        {{- else
+<style>
+    .links {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 22px;
+        margin-top: 1.2rem;
+    }
+    .custom-icon-box {
+        display: flex;
+        width: 1.9rem;
+        height: 1.9rem;
+        fill: currentColor;
+    }
+    .custom-icon-box svg { width: 100%; height: auto; transform: scale(1.15); }
+</style>
